Fixing Category Colors on Mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -17,7 +17,7 @@ body .category-list-item.category tr:first-of-type {
 
 .categories-list .category h3, .categories-list .category h4 {
   margin-bottom: 0;
-  border-left: 6px solid var(--category-1-color);
+  border-left: 6px solid var(--category-color, var(--primary-low));
 }
 
 body .category-list-item.category .posts {
